=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.24_02-dev

fix $r subclassing mechanism when value of `r' or `_r' key is a hashref
thanks to Dave LaMacchia for the spot

fix Apache::PerlRun is-a -> has-a Apache relationship change oversights
[Ken Williams <ken@forum.swarthmore.edu>,
Alexander Solovey <alsol@sumdu.edu.ua>]

win32 updates for 1.3.15, including ApacheModulePerl.{dsp,dll} ->
mod_perl.{dsp,so} rename
[John K. Sterling <sterling@covalent.net>,
Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

fix directive handlers bug triggered by LoadModule foo_module

allow $r->finfo to be modified

if Perl is linked with -lpthread, then httpd needs to be linked with
-lpthread, make sure that happens with USE_DSO=1, warn if USE_APXS=1

disable uselargefile flags by default, enable with:
 Makefile.PL PERL_USELARGEFILES=1

adjust test output (modules/{cgi,constants}) to make 5.7.0-dev
Test::Harness happy

fix $r->custom_response bug which was triggering core dumps if no
ErrorDocuments were configured, thanks to Paul Hodges for the spot

rid PL_na usage in Symbol.xs

INSTALL.win32 updates, obsolete INSTALL.activeperl removed
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

Solving an 'uninitialized value' warn in Apache::SizeLimit.
post_connection() expects a return status from the callback function.
[Stas Bekman <sbekman@stason.org>]

include mod_perl hook/feature config and pod in Apache::MyConfig
[Geoffrey Young <gyoung@laserlink.net>]

rewrite of Apache::WRITE() in c/xs
[Soheil Seyfaie <sseyfaie@cryptologic.com>]

prevent $PerlRequire in a <Perl> section from triggering an endless loop
[Salvador Ortiz Garcia <sog@msg.com.mx>]

build fix for using gcc with AIX
[Jens-Uwe Mager <jum@helios.de>]

allow modification of $r->hostname
[Jim Winstead <jimw@trainedmonkey.com>]

allow Makefile.PL to build mod_perl on Win32 using VC++
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]
