@@ -19,9 +19,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 - From: Perrin Harkins <perrin@primenet.com>
   Subject: Re: How to recognize server shutdown?
 
-- From: Richard L. Goerwitz <richard@catlin.cis.brown.edu>
-  Subject: Re: Bug (easily fixable) in Apache::Server
-
 - From: Wenzhong Tang <Tang@appliant.com>
   Subject: RE: Prototype mismatch in Apache::PerlRun line 343
 
