@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.24_02-dev
 
+use unsigned short rather than short for Apache::Server->port
+thanks to Richard L. Goerwitz for the spot
+
 fix $r subclassing mechanism when value of `r' or `_r' key is a hashref
 thanks to Dave LaMacchia for the spot
 
